--- a/sections/前言.tex
+++ b/sections/前言.tex
@@ -2,20 +2,26 @@
 \addcontentsline{toc}{chapter}{前言}
 \chapter*{前言}
 
+ The statistics course summary actually started from the exam cheatsheets during my first year in minor (2020 fall). At first it only contained some notion explanation / important results. Later I began to add mathematical deductions, intuition of methods, useful external links, etc. \LaTeX \,is used to compile so that I could include cross reference, citation, index in the note so that I could look something up in case of forgetting. Also I treat it as an opportunity to practice \TeX language. I made it publicly available in 2022 fall and from then on I've been trying to enrich early chapters, and correct / improve contents. I hope that this summary note could benefit students like me (e.g. statistics minor students in Tsinghua Univ.). Also I am considering to produce a ZH translation, which might be more convenient for beginners / people not used to English. Also it could act as a ZH-EN contrast. Now the translation of some chapters are already in progress (but slow lol). Please contact me if you are also interested.
 
-\qquad The statistics course summary actually started from the exam cheatsheets during my first year in minor (2020 fall). At first it only contained some notion explanation / important results. Later I began to add mathematical deductions, intuition of methods, useful external links, etc. \hologo{XeTeX} is used to compile so that I could include cross reference, citation, index in the note so that I could look something up in case of forgetting. Also I treat it as an opportunity to practice \LaTeX language. I made it publicly available in 2022 fall and from then on I've been trying to enrich early chapters, and correct / improve contents. I hope that this summary note could benefit students like me (e.g. statistics minor students in Tsinghua Univ.). Also I am considering to produce a ZH translation, which might be more convenient for beginners / people not used to English. Also it could act as a ZH-EN contrast. Now the translation of some chapters are already in progress (but slow lol). Please contact me if you are also interested.
-
-Since it's first written as a reminder for statistics, I may not contain some basic knowledge like calculus, linear algebra, etc. And usually I just write it in a physics student perspective. Besides, for consistency within file and familiarity for myself, I might not use some commonly used notations, so please be careful if you decide to use some of my notes for reference. Also I am not a native English speaker, so please forgive me for any grammatical errors. I will try to correct them as soon as possible.
+Since it's first written as a reminder for statistics, I may not contain some basic knowledge like calculus, linear algebra, etc in this note. And usually I just write it in a physics student perspective. Besides, for consistency within file and familiarity for myself, I might not use some commonly used notations, so please be careful if you decide to use some of my notes for reference. You can look up the denotation table in the case of confusion. Also I am not a native English speaker, so please forgive me for any grammatical errors. I will try to correct them as soon as possible.
 
 
-\chapter*{致谢}
+\newpage
 \phantomsection
+\chapter*{致谢}
+
 \addcontentsline{toc}{chapter}{致谢}
 
-\qquad The project is mostly based on the course content of statistics minor in Center of Statistical Science at Tsinghua. I would like to express my gratitude to the faculty for their careful preparation and for their help to me. They include (in the order I first took their courses): Wanlu Deng, Jiangdian Wang, Zaiying Zhou, Dong Li, Tianying Wang, Sheng Yu, Pengkun Yang.
+The project is mostly based on the course content of statistics minor at Center of Statistical Science at Tsinghua. I would like to express my gratitude to the faculty for their careful preparation and for their help to me. They include (in the order I first took their courses): Wanlu Deng, Jiangdian Wang, Zaiying Zhou, Dong Li, Tianying Wang, Sheng Yu, Pengkun Yang.
 
-In particular, I would like to express my appreciation to Professor Zaiying Zhou for her guidance, encouragement and inspiration, which are largely the driving force for my further study into the field of statistics.
+In particular, I would like to express my appreciation to professor Zaiying Zhou for her guidance, encouragement and inspiration, which are largely the driving force for my further study into the field of statistics. And also great thanks to Tianying Wang and Sheng Yu for advising my undergraduate research training. Their passion for research as a scholar really impressed me and I learned a lot from them.
 
-I would like to thank Suqing Liu for his invaluable contributions to ZH translation in this project. And I would like to thank my classmates Mai Zhang, Hao Meng and Yong Qin, who offered me help by discussing problems with me, proofreading the draft and tackling capstone projects together. I really learned a lot from them, both in knowledge and the way they learn.
+I would like to thank Suqing Liu for his invaluable contributions to ZH translation in this project. And I would like to thank my classmates Mai Zhang, Hao Meng, Bufan Li, Dong Huang, and Yong Qin, who offered me help by discussing problems with me, proofreading the draft and tackling capstone projects together. Also I express my thanks to Xieheng Wang, Kaixing Liu, Ximing Li, Runyu Qi, Sifan Tao, Jiarui Chen, Yikun Li, Zeyu Zhang who supported me in the path of statistics. Also I thank my friends, including by not limited to: Shiyi Peng, Yiduo Xu, Peixin Weng, Haoran Zhang, Yuxin Huang, Guancheng Chen, Peng Zhang, Shaohan Wang, Weijing Yin, etc. Wish everyone all the best in the future. 
+
+Finally, deepest gratitude to my family. I would not become who I am today without their support.
+
+
+
 
 
