--- a/sections/记号.tex
+++ b/sections/记号.tex
@@ -1,5 +1,10 @@
-
+\phantomsection
 \addcontentsline{toc}{chapter}{记号表}
+
+
+
+
+
 \renewcommand{\nomname}{记号表} % 记号表标题
 
 \renewcommand\nomgroup[1]{%记号表中的符号分组排序方式
@@ -19,7 +24,7 @@ Symbol listed here are notations `by default' in this summary note. Specially de
 
 % 在正文中的任意位置都可以添加符号
 
-\nomenclature[A]{Greek / Latin}{Greek alphabet is used to describe the intrinsic property while Latin alphabet is used for estimator. e.g. $ \sigma ^2_X=var(X) $, $ \hat{\sigma }^2_X=\hat{var}(X)=S^2 $. e.g. $ \theta  $ is used to denote the paramer of distribution (family).}
+\nomenclature[A]{Greek / Latin}{Greek alphabet is used to describe the intrinsic property while Latin alphabet is used for estimator. e.g. $ \sigma ^2_X=var(X) $, $ \hat{\sigma }^2_X=\hat{var}(X)=S^2 $. e.g. $ \theta  $ is used to denote the parameter of distribution (family).}
 
 \nomenclature[C]{$ \mathbb{P} $}{Probability measure}
 
