--- a/summary.tex
+++ b/summary.tex
@@ -37,15 +37,13 @@
 \usepackage{etoolbox}%记号表中的分组
 \usepackage{hologo}%for xetex logo
 
-% \tikzset{
-%   LabelStyle/.style = { draw, rectangle, rounded corners, fill = white},
-%   VertexStyle/.append style = { font = \bfseries, fill = white},
-%   EdgeStyle/.append style = {->, bend left} }
-
-
 
 %页边距设置
-\usepackage[left=0.5in,right=0.5in,top=0.7in,bottom=0.57in]{geometry}
+% \usepackage[left=0.5in,right=0.5in,top=0.7in,bottom=0.57in]{geometry}
+% if book
+\usepackage[twoside,
+  left=16mm, right=16mm, top=25mm, bottom=18mm,
+  bindingoffset=5mm, headsep=5mm, footskip=7mm]{geometry}
 
 %段行设置
 \linespread{1.4}%行距
@@ -56,7 +54,7 @@
 \setmainfont{Times New Roman}
 \newfontfamily\consolas{Consolas}
 
-%其他设置
+%其他环境、符号自定义设置
 \newenvironment{point}{\raggedright$\Box $ \bfseries}{}%新环境point，用于标示重点内容
 \newenvironment{rcode}{\raggedright$  \vartriangleright  $ \lstinline|R.| \textbf{Code}  \\}{}%新环境rcode，用于建立R语言命令段落
 \renewenvironment{proof}{{\noindent$\square$\,\it Proof: }}{\hfill $\square$\par}% 证明环境回退到英文版 以proof开头
@@ -67,8 +65,18 @@
 \allowdisplaybreaks[2]%跨页公式
 \newcommand{\independent}{\bot\!\!\!\bot} % 简易的“独立于”符号
 
+
 %页眉页脚设置
 \usepackage{fancyhdr} % 页眉页脚格式包
+\fancypagestyle{TitlePage}{
+  \fancyhead{}
+  \fancyhead[LO,RE]{} % 位置 左中右LCR + 奇偶 OE
+  \fancyhead[RO,LE]{\textit{Compiled using \textnormal{\hologo{XeTeX}} engine.}}
+  \fancyhead[C]{} 
+  \fancyfoot[C]{}
+  \renewcommand{\headrulewidth}{0pt}
+  \renewcommand{\footrulewidth}{0pt}
+}
 \fancypagestyle{preContent}{
   \fancyhead{}
   \fancyhead[LO,RE]{Tuorui Peng} % 位置 左中右LCR + 奇偶 OE
@@ -159,38 +167,46 @@
 % }
 
 
+% tikz制图
+% \tikzset{
+%   LabelStyle/.style = { draw, rectangle, rounded corners, fill = white},
+%   VertexStyle/.append style = { font = \bfseries, fill = white},
+%   EdgeStyle/.append style = {->, bend left} }
 
-\usepackage[colorlinks,linkcolor=red,anchorcolor=blue,citecolor=green]{hyperref}%超链接引用，最后插入以避免问题
+
+
+\usepackage[colorlinks,linkcolor=blue,anchorcolor=blue,citecolor=green]{hyperref}%超链接引用，最后插入以避免问题
 % 节标题格式设置
 \titleformat{\chapter}[block]{\centering\LARGE\bfseries}{Chapter. \Roman{chapter} }{1em}{}[]
 \titleformat{\section}[block]{\Large\bfseries}{Section \arabic{chapter}.\arabic{section}}{1em}{}[]
 \titleformat{\subsection}[block]{\large\bfseries}{\arabic{chapter}.\arabic{section}.\arabic{subsection}}{1em}{}[]
 % 节标题、公式交叉引用格式设置
 
-\renewcommand{\equationautorefname}{equation.}%公式引用格式
-\renewcommand{\figureautorefname}{figure.}%图片引用格式
-\renewcommand{\chapterautorefname}{Chapter.}%章节引用格式
-\renewcommand{\sectionautorefname}{section.}%章节引用格式
-\renewcommand{\subsectionautorefname}{section.}%章节引用格式
-
-
+\renewcommand{\equationautorefname}{equation}%公式引用格式
+\renewcommand{\figureautorefname}{figure}%图片引用格式
+\renewcommand{\tableautorefname}{table}
+\renewcommand{\chapterautorefname}{Chapter}%章节引用格式
+\renewcommand{\sectionautorefname}{section}%章节引用格式
+\renewcommand{\subsectionautorefname}{section}%章节引用格式
+\renewcommand{\pageautorefname}{page}
 % \titleformat{\paragraph}[block]{\small\bfseries}{[\arabic{paragraph}]}{1em}{}[]
-
 % \\titleformat{\\chaptercommand}[shape]{format}{title-label}{sep}{before-title}[after-title]
 
+\let\oldautoref\autoref
+\renewcommand{\autoref}[1]{\oldautoref{#1}\,\textasciitilde\,\autopageref{#1}}%交叉引用格式，引用时显示页码。
 
-%SumatraPDF反向搜索命令行
-% "C:\Users\彭拓锐Vincent\AppData\Local\Programs\Microsoft VS Code\Code.exe" "C:/Users/彭拓锐Vincent/AppData/Local/Programs/Microsoft VS Code\resources\app\out\cli.js" -r -g "%f:%l"
+
+
 
 
 % \begin{titlepage}
 %     \title{
 %       \settowidth{\unitlength}{\huge A Brief Summary of Statistics Minor Courses}
 %       \rule{\unitlength}{1.6pt}\vspace*{-\baselineskip}\vspace*{2pt}
-%       \rule{\unitlength}{0.4pt}\\[\baselineskip]
-%       \LARGE\textbf{A Brief Summary of Statistics Minor Courses}\\\Large\heiti 清华大学统计学辅修课程知识总结\\[0.3\baselineskip]
+%       \rule{\unitlength}{0.4pt}\\begin{align}\baselineskip]
+%       \LARGE\textbf{A Brief Summary of Statistics Minor Courses}\\\Large\heiti 清华大学统计学辅修课程知识总结\\begin{align}0.3\baselineskip]
 %       \rule{\unitlength}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt}
-%       \rule{\unitlength}{1.6pt}\\[\baselineskip]
+%       \rule{\unitlength}{1.6pt}\\begin{align}\baselineskip]
 %     }
 %     \author[*]{\scshape Tuorui Peng\thanks{E-mail: {v1ncent19@outlook.com} | HomePage: {https://v1ncent19.github.io}}}
 %     \affil[*]{\small Department of Physics, Tsinghua University, Beijing, China}
@@ -221,7 +237,37 @@
 
 
 \begin{titlepage}
-  \thispagestyle{myheadings}\markright{Compiled using \textnormal{\hologo{XeTeX}} engine.}
+  \thispagestyle{TitlePage}
+  \begin{center}
+      \vspace*{4cm}
+{      \settowidth{\unitlength}{\Huge A Brief Summary of Statistics Minor Courses}
+      \rule{\unitlength}{1.6pt}\vspace*{-\baselineskip}\vspace*{2pt}
+      \rule{\unitlength}{0.4pt}\\[\baselineskip]
+      \huge\textbf{A Brief Summary of Statistics Minor Courses}\\\LARGE\heiti 清华大学统计学辅修课程知识总结\\[0.3\baselineskip]
+      \rule{\unitlength}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt}
+      \rule{\unitlength}{1.6pt}\\[\baselineskip]}
+          
+      \vspace{1.5cm}
+{      \large\scshape Tuorui Peng\\
+      \ttfamily\normalsize v1ncent19}
+
+      \vspace{1.5cm}
+{      \normalshape\normalfont\small
+       Department of Physics, Tsinghua University, Beijing, China.\\
+       Department of Statistics and Data Science, Northwestern University, Evanston, IL, USA.}
+          
+
+      \vspace{1.5cm}
+      
+          
+  \end{center}
+\end{titlepage}
+
+\newpage
+\thispagestyle{empty}
+
+\begin{titlepage}
+  \thispagestyle{TitlePage}
   \begin{center}
       \vspace*{4cm}
 {      \settowidth{\unitlength}{\Huge A Brief Summary of Statistics Minor Courses}
@@ -237,8 +283,8 @@
 
       \vspace{1.5cm}
 {      \normalshape\normalfont\small
-       $ ^1 $Department of Physics, Tsinghua University, Beijing, China\\
-       $ ^1 $Department of Statistics and Data Science, Northwestern University, Evanston, IL, USA}
+       $ ^1 $Department of Physics, Tsinghua University, Beijing, China.\\
+       $ ^1 $Department of Statistics and Data Science, Northwestern University, Evanston, IL, USA.}
           
 
       \vspace{1.5cm}
@@ -247,12 +293,12 @@
   \end{center}
 \end{titlepage}
 
-% \maketitle\thispagestyle{myheadings}\markright{Compiled using \hologo{XeTeX} engine.}
-
 \include{sections/前言}
 
 
 \pagestyle{preContent}
+\phantomsection
+\addcontentsline{toc}{chapter}{目录}
 \tableofcontents
 \newpage
 
@@ -292,11 +338,7 @@
 \include{sections/初等概率论}
 
 \include{sections/统计推断}
-\newpage
 
-% \thispagestyle{SectionPage}
-%  \include{sections/R}
-%  
 \include{sections/线性回归分析}
 
 \include{sections/多元统计分析}
@@ -326,6 +368,10 @@
 
 \include{sections/ReferenceBook}
 
+
+\include{sections/后记}
+
+\newpage
 \phantomsection
 \addcontentsline{toc}{chapter}{索引}
 \printindex
